--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -41,5 +41,6 @@ jobs:
       - run: npm ci
       - run: npm run build
       - run: npm publish
-      # todo: provide auth token
+        env:
+          NODE_AUTH_TOKEN: ${{secrets.GITHUB_TOKEN}}
         
